build/k8s/op-stack/config/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: op-stack-gateway
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "op-stack.cloned.link"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "op-stack.cloned.link"
    tls:
      mode: SIMPLE
      credentialName: cloned-link-tls
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: deploy-vs
spec:
  hosts:
  - "op-stack.cloned.link"
  gateways:
  - op-stack-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: geth-execution
        port:
          number: 8545
